2008-11-18  Marc Singer  <elf@zealous.synapse.com>

	* src/net/tftp.c (tftp_receiver): Reporting on TFTP errors
	s.t. we properly detect file-not-found problems.

2008-11-13  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): Version 1.6.3 for dm9000.  The initial
          orion patches are in as well, but not yet supported.

	* src/drivers/drv-dm9000.c (dm9000_read): Implementation of
	dm9000_{read,write} to round out support for dm9000 as a complete
	Ethernet MAC/PHY driver.

2008-09-16  Marc Singer  <elf@zealous.synapse.com>

	* src/lib/strtol.c: Adding strtol as a separate library function,
	in case it is needed.  The memlimit command will use this function.

	* src/mach-mx3/rosencrantz.h (CCM_PDR0_V): Override for the PDR0
	so that the CSI clock scalar is non-default.

	* src/mach-mx3/mx31.h (CCM_UPCTL_266_V): Fixed the UPCTL
	initialization values.  This PLL is based on the CKIH, so it
	doesn't need to change when the CPU clock speed changes.
	(CCM_PDR0_V): Allowing this value to be overridden by the board
	specific header.

	* src/drivers/drv-mem.c (cmd_memlimit): Revised memlimit to permit
	a negative offset which is then subtracted from the total system
	memory.

2008-09-15  Marc Singer  <elf@buici.com>

	* debian/rules (binary-arch): Adding apex-image to the tools
	installed in the debian package.

2008-09-12  Marc Singer  <elf@zealous.synapse.com>

	* src/apex/cmd-image-uboot.c: Documentation for UBOOT image
	format.
	(verify_uboot_image): Added support for multi-images.  Now loading
	UBOOT images the same way that UBOOT does.

	* src/apex/region-checksum.c (region_checksum): Fixed the checksum
	to account for incoming CRC value as is necessary for UBOOT image
	CRC computation.

	* src/apex/cmd-image-uboot.c: Added uboot image support.  No
	multi-images, but the rest works OK.

	* src/apex/region-checksum.c (region_checksum): Added neglected
	check for whether or not the caller wants the length added to the
	checksum
