@@ -30,5 +30,7 @@
 void* alloc_uncached (size_t cb, size_t alignment);
 void* alloc_uncached_top_retain (size_t cb, size_t alignment);
 void mmu_protsegment (void* pv, int cacheable, int bufferable);
+void mmu_map_segment (void* physical, void* virtual,
+                      int cacheable, int bufferable);
 
 #endif  /* __MMU_H__ */
