@@ -193,7 +193,8 @@ ENTRY(__udivsi3)
 ENTRY(__aeabi_uidiv)
 
 	subs	r2, r1, #1
-	moveq	pc, lr
+@	moveq	pc, lr
+	bxeq    lr
 	bcc	Ldiv0
 	cmp	r0, r1
 	bls	11f
@@ -203,16 +204,19 @@ ENTRY(__aeabi_uidiv)
 	ARM_DIV_BODY r0, r1, r2, r3
 
 	mov	r0, r2
-	mov	pc, lr
+@	mov	pc, lr
+	bx      lr
 
 11:	moveq	r0, #1
 	movne	r0, #0
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 12:	ARM_DIV2_ORDER r1, r2
 
 	mov	r0, r0, lsr r2
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 
 ENTRY(__umodsi3)
@@ -223,11 +227,13 @@ ENTRY(__umodsi3)
 	moveq   r0, #0
 	tsthi	r1, r2				@ see if divisor is power of 2
 	andeq	r0, r0, r2
-	movls	pc, lr
+@	movls	pc, lr
+	bxls	lr
 
 	ARM_MOD_BODY r0, r1, r2, r3
 
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 
 ENTRY(__divsi3)
@@ -250,23 +256,27 @@ ENTRY(__aeabi_idiv)
 
 	cmp	ip, #0
 	rsbmi	r0, r0, #0
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 10:	teq	ip, r0				@ same sign ?
 	rsbmi	r0, r0, #0
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 11:	movlo	r0, #0
 	moveq	r0, ip, asr #31
 	orreq	r0, r0, #1
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 12:	ARM_DIV2_ORDER r1, r2
 
 	cmp	ip, #0
 	mov	r0, r3, lsr r2
 	rsbmi	r0, r0, #0
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 
 ENTRY(__modsi3)
@@ -287,7 +297,8 @@ ENTRY(__modsi3)
 
 10:	cmp	ip, #0
 	rsbmi	r0, r0, #0
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 #ifdef CONFIG_AEABI
 
@@ -298,7 +309,8 @@ ENTRY(__aeabi_uidivmod)
 	ldmfd	sp!, {r1, r2, ip, lr}
 	mul	r3, r0, r2
 	sub	r1, r1, r3
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 ENTRY(__aeabi_idivmod)
 
@@ -307,7 +319,8 @@ ENTRY(__aeabi_idivmod)
 	ldmfd	sp!, {r1, r2, ip, lr}
 	mul	r3, r0, r2
 	sub	r1, r1, r3
-	mov	pc, lr
+@	mov	pc, lr
+	bx	lr
 
 #endif
 
