@@ -13,7 +13,10 @@ lib-y := vsprintf.o ctype.o strtol.o
 lib-y += strlen.o strnlen.o strchr.o strlcpy.o strcat.o strcpy.o
 lib-y += strcmp.o strnicmp.o strcspn.o
 lib-y += memcmp.o memset.o
-lib-$(CONFIG_SMALL) += memcpy.o memmove.o
+lib-y += memcpy.o
+#lib-$(CONFIG_SMALL) += memcpy.o
+lib-$(CONFIG_SMALL) += memmove.o
+#lib-$(CONFIG_THUMB) += memcpy.o
 lib-y += crc32.o xmodem.o
 lib-$(CONFIG_CRC32_LSB) += crc32-lsb.o
 lib-y += spinner.o
@@ -35,5 +38,3 @@ endif
 
 #lib-y += div64.o
 #lib-y += udiv.o
-#CFLAGS_vsprintf.o += -mthumb
-#CFLAGS_crc32.o = -mthumb -mthumb-interwork
