@@ -10,6 +10,7 @@
 #
 
 obj-y += initialize.o timer.o env.o cpuinfo.o cmd-reset.o cmd-sleep.o
+obj-$(CONFIG_EXCEPTIONS)        += exception_vectors.o
 obj-$(CONFIG_DRIVER_ONENAND)	+= cmd-onenand.o
 obj-$(CONFIG_IPU_TEST)		+= ipu.o
 obj-$(CONFIG_MX31ADS_UARTA)	+= serial-sc16c652.o
@@ -17,12 +18,12 @@ obj-$(CONFIG_MX31_UART1)	+= serial-mx31.o
 obj-$(CONFIG_MACH_KARMA5)	+= karma-cmd-clcdc.o karma-cmd-accel.o
 
 ifneq ($(CONFIG_THUMB),)
-#   CFLAGS_timer.o		+= -mthumb
-# #  CFLAGS_initialize.o		+= -mthumb
-#   CFLAGS_timer.o		+= -mthumb
-#   CFLAGS_env.o			+= -mthumb
-# #  CFLAGS_cpuinfo.o		+= -mthumb
-#   CFLAGS_cmd-reset.o		+= -mthumb
-# #  CFLAGS_cmd-sleep.o		+= -mthumb
-#   CFLAGS_serial-mx31.o		+= -mthumb
+  CFLAGS_timer.o		+= -mthumb
+#  CFLAGS_initialize.o		+= -mthumb
+  CFLAGS_timer.o		+= -mthumb
+  CFLAGS_env.o			+= -mthumb
+#  CFLAGS_cpuinfo.o		+= -mthumb
+  CFLAGS_cmd-reset.o		+= -mthumb
+#  CFLAGS_cmd-sleep.o		+= -mthumb
+  CFLAGS_serial-mx31.o		+= -mthumb
 endif
